[package]
name = "rust-ndi-viewer"
version = "0.1.0"
edition = "2024"
authors = ["未完成成果物研究所 <misei.nul@gmail.com>"]
license = "MIT"

[dependencies]
anyhow = "1.0"
eframe = { version = "0.33" }
grafton-ndi = { version = "0.10.0" }
wgpu = "24"
pollster = "0.4"
arc-swap = "1.7"
tokio = { version = "1", features = ["full"] }
bytemuck = "1.14"

[[bin]]
name = "raw-viewer"
path = "src/bin/raw_viewer.rs"

[[bin]]
name = "buffered-viewer"
path = "src/bin/buffered_viewer.rs"

[[bin]]
name = "grayscale-cpu"
path = "src/bin/grayscale_cpu.rs"

[[bin]]
name = "grayscale-wgpu"
path = "src/bin/grayscale_wgpu.rs"

[[bin]]
name = "tokio-viewer"
path = "src/bin/tokio_viewer.rs"

[[bin]]
name = "framesync-viewer"
path = "src/bin/framesync_viewer.rs"

[[bin]]
name = "blur-cpu"
path = "src/bin/blur_cpu.rs"

[[bin]]
name = "blur-wgpu"
path = "src/bin/blur_wgpu.rs"